--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -29,6 +29,11 @@ jobs:
           pip install -r requirements.txt
           pip install -e .
 
+      - name: Install pandoc
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pandoc
+
       - name: Build HTML documentation
         run: |
           cd docs
