--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -21,5 +21,8 @@ jobs:
           pip install -r requirements.txt
           pip install -e .
 
+    - name: Run doctests
+      run: python -m doctest src/**/*.py
+
     - name: Run unit tests
       run: python -m unittest discover -s tests
