--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -34,11 +34,15 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y pandoc graphviz
 
+      - name: Check Pygments version
+        run: |
+          python -m pip show Pygments
+
       - name: Build HTML documentation
         run: |
           cd docs
           make html
-    
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
