--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -22,7 +22,7 @@ jobs:
           pip install -e .
 
     - name: Run doctests
-      run: python -m doctest src/**/*.py
+      run: python -m doctest src/sargeom/**/*.py
 
     - name: Run unit tests
       run: python -m unittest discover -s tests
