--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: dist/*.whl
+        asset_path: ./dist/*.whl
         asset_name: sargeom-${{ github.ref }}.whl
         asset_content_type: application/zip
